# Dusk

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
assets/scripts/dusk/: Actor.lua  App.lua  Class.lua  Component.lua  Dusk.lua  Events.lua  Scene.lua
assets/shaders/data/: material.inc.glsl  transform.inc.glsl
assets/shaders/default/: text.fs.glsl  text.vs.glsl
cmake/: FindFlatBuffers.cmake  FindSDL2.cmake
depend/: CMakeLists.txt
include/dusk/: Actor.hpp  App.hpp  Asset.hpp  Benchmark.hpp  Camera.hpp  Component.hpp  Config.hpp.in  Dusk.hpp  Event.hpp  EventCallbacks.hpp  EventDispatcher.hpp  Font.hpp  Log.hpp  Material.hpp  Mesh.hpp  Model.hpp  Platform.hpp  Scene.hpp  ScriptHost.hpp  Shader.hpp  Shader.inc.hpp  Sound.hpp  Texture.hpp  UI.hpp  Util.hpp  Video.hpp  dusk.hpp
src/: Actor.cpp  App.cpp  Benchmark.hpp  Component.cpp  Debug.hpp  Dusk.cpp  Mesh.cpp  Model.cpp  Scene.cpp  UI.cpp  Util.cpp  dusk.cpp
src/dusk/: Actor.cpp  App.cpp  Camera.cpp  Component.cpp  Dusk.cpp  Event.cpp  Event.hpp  EventCallbacks.cpp  EventDispatcher.cpp  Font.cpp  IEventDispatcher.hpp  Material.cpp  Mesh.cpp  Model.cpp  Scene.cpp  ScriptHost.cpp  Shader.cpp  Sound.cpp  Texture.cpp  UI.cpp  Util.cpp  Video.cpp
src/imgui/: imgui.cpp  imgui_impl_glfw_gl3.cpp  imgui_impl_sdl_gl3.cpp
