
IF(NOT DEFINED CMAKE_SUPPRESS_DEVELOPER_WARNINGS)
    SET(CMAKE_SUPPRESS_DEVELOPER_WARNINGS 1 CACHE INTERNAL "No dev warnings")
ENDIF()

ADD_SUBDIRECTORY(glm)
SET(GLM_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/glm")

ADD_SUBDIRECTORY(json)
SET(JSON_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/json/src")

SET_TARGET_PROPERTIES(
    glm nlohmann_json glm_dummy json_unit catch_main
    PROPERTIES FOLDER "depend")

SET_TARGET_PROPERTIES(
    glm_dummy json_unit catch_main
    PROPERTIES
    EXCLUDE_FROM_ALL 1
    EXCLUDE_FROM_DEFAULT_BUILD 1)
