
IF(NOT DEFINED CMAKE_SUPPRESS_DEVELOPER_WARNINGS)
    SET(CMAKE_SUPPRESS_DEVELOPER_WARNINGS 1 CACHE INTERNAL "No dev warnings")
ENDIF()

ADD_SUBDIRECTORY(glm)
SET(GLM_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/glm" PARENT_SCOPE)

ADD_SUBDIRECTORY(json)
SET(JSON_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/json/src" PARENT_SCOPE)

ADD_SUBDIRECTORY(lua)
SET(LUA_LIBRARIES liblua PARENT_SCOPE)
SET(LUA_INCLUDE_DIRS "${CMAKE_CURRENT_LIST_DIR}/src" "${CMAKE_BINARY_DIR}/depend/lua" PARENT_SCOPE)

SET_TARGET_PROPERTIES(
    glm_dummy json_unit catch_main lua luac
    PROPERTIES FOLDER "depend")

SET_TARGET_PROPERTIES(
    glm_dummy json_unit catch_main lua luac
    PROPERTIES
    EXCLUDE_FROM_ALL 1
    EXCLUDE_FROM_DEFAULT_BUILD 1)
